# rick-morty-status

./: Cargo.toml  README.md
src/: main.rs
