[package]
name = "rust-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["blocking", "json"]}
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
error-chain = "0.12.4"
serde_derive = "1.0.144"
rand = "0.8.4"